[gd_scene load_steps=13 format=3 uid="uid://c0atnlhuqsvft"]

[ext_resource type="Script" path="res://Scenes/TitleScene/TitleScene.gd" id="1_rbayy"]
[ext_resource type="Texture2D" uid="uid://cwncik42ogb6j" path="res://Sprites/Background.png" id="2_kkl7l"]
[ext_resource type="Script" path="res://Scenes/Game/GameManager.gd" id="3_3i7cy"]
[ext_resource type="Theme" uid="uid://b2vnrnnylbxce" path="res://Theme/GameTheme.tres" id="4_thr0y"]
[ext_resource type="Texture2D" uid="uid://b8gubxi6w0g6y" path="res://Sprites/SANDWICH.png" id="5_smywd"]
[ext_resource type="Texture2D" uid="uid://btlhmvksepfxy" path="res://Sprites/Minty.png" id="6_ccutp"]
[ext_resource type="Texture2D" uid="uid://drwfa448r8dqe" path="res://Sprites/FalloutBoy.png" id="7_1p16x"]
[ext_resource type="Texture2D" uid="uid://c1clo6k4aioye" path="res://Sprites/Placeholder.png" id="8_rt2sl"]
[ext_resource type="Texture2D" uid="uid://3ckad8dci3xg" path="res://Sprites/Bomb.png" id="9_ewxcj"]
[ext_resource type="Texture2D" uid="uid://c1aclyxdruew4" path="res://Sprites/BrokenHeart.png" id="10_r1jp8"]
[ext_resource type="Texture2D" uid="uid://dxuftvi76jvjw" path="res://Sprites/Tealberry.png" id="11_k4bpy"]
[ext_resource type="Texture2D" uid="uid://bs3mp6wo7vrfa" path="res://Sprites/PewPew.png" id="12_ospfw"]

[node name="Title Scene" type="Node2D"]
script = ExtResource("1_rbayy")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(595, 355)
scale = Vector2(1.31672, 1.31672)
texture = ExtResource("2_kkl7l")

[node name="Falling Items" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.462745)
script = ExtResource("3_3i7cy")

[node name="Spawn Timer" type="Timer" parent="Falling Items"]
wait_time = 0.75
autostart = true

[node name="UI Area" type="CenterContainer" parent="."]
offset_right = 1200.0
offset_bottom = 700.0

[node name="Vertical Layout" type="VBoxContainer" parent="UI Area"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Game Title" type="Label" parent="UI Area/Vertical Layout"]
layout_mode = 2
theme = ExtResource("4_thr0y")
text = "SMELLIE ELLiE'S
CATCH EM ALL"
horizontal_alignment = 1

[node name="Play Button" type="Button" parent="UI Area/Vertical Layout"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("4_thr0y")
text = "PLAY"

[node name="Quit Button" type="Button" parent="UI Area/Vertical Layout"]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("4_thr0y")
text = "QUIT"

[node name="Items Area" type="VBoxContainer" parent="UI Area/Vertical Layout"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Good Items" type="HBoxContainer" parent="UI Area/Vertical Layout/Items Area"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Good Items Text" type="Label" parent="UI Area/Vertical Layout/Items Area/Good Items"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
theme = ExtResource("4_thr0y")
theme_override_font_sizes/font_size = 40
text = "GOOD ITEMS:"

[node name="Sandwich" type="TextureRect" parent="UI Area/Vertical Layout/Items Area/Good Items"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("5_smywd")
expand_mode = 1
stretch_mode = 5

[node name="Minty" type="TextureRect" parent="UI Area/Vertical Layout/Items Area/Good Items"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("6_ccutp")
expand_mode = 1
stretch_mode = 5

[node name="Fallout Boy" type="TextureRect" parent="UI Area/Vertical Layout/Items Area/Good Items"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
texture = ExtResource("7_1p16x")
expand_mode = 1
stretch_mode = 5

[node name="MISSING 1" type="TextureRect" parent="UI Area/Vertical Layout/Items Area/Good Items"]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
texture = ExtResource("8_rt2sl")
expand_mode = 1
stretch_mode = 5

[node name="MISSING 2" type="TextureRect" parent="UI Area/Vertical Layout/Items Area/Good Items"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("8_rt2sl")
expand_mode = 1
stretch_mode = 5

[node name="Bad Items" type="HBoxContainer" parent="UI Area/Vertical Layout/Items Area"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Bad Items Text" type="Label" parent="UI Area/Vertical Layout/Items Area/Bad Items"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
theme = ExtResource("4_thr0y")
theme_override_font_sizes/font_size = 40
text = "BAD ITEMS:"

[node name="Bomb" type="TextureRect" parent="UI Area/Vertical Layout/Items Area/Bad Items"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("9_ewxcj")
expand_mode = 1
stretch_mode = 5

[node name="Broken Heart" type="TextureRect" parent="UI Area/Vertical Layout/Items Area/Bad Items"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("10_r1jp8")
expand_mode = 1
stretch_mode = 5

[node name="Power Ups" type="HBoxContainer" parent="UI Area/Vertical Layout/Items Area"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Power Ups Text" type="Label" parent="UI Area/Vertical Layout/Items Area/Power Ups"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
theme = ExtResource("4_thr0y")
theme_override_font_sizes/font_size = 40
text = "POWER UPS:"

[node name="Tealberry" type="TextureRect" parent="UI Area/Vertical Layout/Items Area/Power Ups"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("11_k4bpy")
expand_mode = 1
stretch_mode = 5

[node name="PewPew" type="TextureRect" parent="UI Area/Vertical Layout/Items Area/Power Ups"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("12_ospfw")
expand_mode = 1
stretch_mode = 5

[connection signal="timeout" from="Falling Items/Spawn Timer" to="Falling Items" method="spawn_item"]
[connection signal="pressed" from="UI Area/Vertical Layout/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UI Area/Vertical Layout/Quit Button" to="." method="_on_quit_button_pressed"]
